2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* MainLoop.cs:
	* NetworkIO.cs:
	* Tracker/HTTPTracker.cs:
	* PieceWriter/IPieceWriter.cs: Fix a lot of build warnings

2008-10-06  Alan McGovern <amcgovern@novell.com> 

	* NetworkIO.cs: Don't sync to the mainloop between each call to
	  send/receive. Only sync when the entire message has been
	  sent/received.

2008-03-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* Tracker/TrackerFactory.cs: Added try/catch to prevent an invalid address
	  exploding the engine

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* Logger.cs: Add a 'Flush' method

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* ClientEngine.cs: Cleaned up some of my method firing goodness

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-02-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* MessageHandler.cs: Added logging for exceptions handling messages

2008-02-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* Messages/UdpTrackerMessages/ErrorMessage.cs: Fixed assignment to self bug.

2008-01-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* Tracker/HTTPTracker.cs: Cosmetic

2008-01-22  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-01-12  Alan McGovern <alan.mcgovern@gmail.com> 

	* Tracker/TrackerConnectionId.cs: internal - public 
