@@ -34,8 +34,8 @@ namespace MonoTorrent.Client
 {
     public class DhtPeersAdded : PeersAddedEventArgs
     {
-        public DhtPeersAdded(TorrentManager manager, int peersAdded)
-            : base(manager, peersAdded)
+        public DhtPeersAdded(TorrentManager manager, int peersAdded, int total)
+            : base(manager, peersAdded, total)
         {
 
         }
