@@ -38,15 +38,21 @@ namespace MonoTorrent.Client
     /// </summary>
     public abstract class PeersAddedEventArgs : TorrentEventArgs
     {
+        private int count;
+        private int total;
+        
         #region Member Variables
-        /// <summary>
-        /// The number of peers that were added in the last update
-        /// </summary>
-        public int Count
+
+        public int ExistingPeers
+        {
+            get { return total - NewPeers; }
+        }
+        
+        public int NewPeers
         {
             get { return this.count; }
         }
-        private int count;
+        
         #endregion
 
 
@@ -55,10 +61,11 @@ namespace MonoTorrent.Client
         /// Creates a new PeersAddedEventArgs
         /// </summary>
         /// <param name="peersAdded">The number of peers just added</param>
-        protected PeersAddedEventArgs(TorrentManager manager, int peersAdded)
+        protected PeersAddedEventArgs(TorrentManager manager, int peersAdded, int total)
             : base(manager)
         {
             this.count = peersAdded;
+            this.total = total;
         }
         #endregion
     }
