@@ -56,8 +56,9 @@ namespace MonoTorrent.Client.Messages.Libtorrent
 
         internal override void Handle(PeerId id)
         {
-            int count = id.TorrentManager.AddPeers(Peer.Decode((BEncodedString)peerDict[AddedKey]));
-            id.TorrentManager.RaisePeersFound(new PeerExchangePeersAdded(id.TorrentManager, count, id));
+            IList<Peer> peers = Peer.Decode((BEncodedString)peerDict[AddedKey]);
+            int count = id.TorrentManager.AddPeers(peers);
+            id.TorrentManager.RaisePeersFound(new PeerExchangePeersAdded(id.TorrentManager, count, peers.Count, id));
         }
 
         public override int ByteLength
