@@ -1,5 +1,11 @@
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
+	* TorrentManager.cs:
+	* TrackerManager.cs: Display the number of number of new peers added as
+	well as the number of peers which already existed.
+
+2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
+
 	* PeerManager.cs:
 	* DiskManager.cs:
 	* ListenManager.cs:
